# mediapipe-models

./: .dockerignore  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.devcontainer/: .env  Dockerfile  devcontainer.json  docker-compose.yml  entrypoint.sh  requirements.txt
.github/workflows/: python-release.yml
mp_models/meta/: __init__.py
mp_models/meta/data_models/: face_detector.py  language_detector.py  output.py
mp_models/meta/interfaces/: mp_detector.py
mp_models/models/: __init__.py
mp_models/models/image/: face_detector.py
mp_models/models/text/: language_detector.py
mp_models/utils/: image.py  path.py
notebooks/01-models/01-text/: 01-language-detector.ipynb
notebooks/01-models/02-image/: 01-face-detector.ipynb
notebooks/detectors/: 01-language-detector.ipynb
